# gtav_linux_editor

./: .gitignore  Cargo.toml  README.md
assets/: hash_name_seeds.txt
docs/: AI_HANDOFF.md  PROJECT_OVERVIEW.md  UI_ARCHITECTURE.md  V1_DEVELOPMENT_NOTES.md
src/: config.rs  filesystem.rs  launcher.rs  main.rs  setup.rs
